fix: heading and list-block styles (wrapping of words)

--- a/src/app/components/article/article.component.scss
+++ b/src/app/components/article/article.component.scss
@@ -9,7 +9,7 @@
     font-weight: var(--mat-sys-title-small-weight);
     color: var(--mat-sys-tertiary-25);
     opacity: 0.5;
-    translate: 0 -1.4rem;
+    translate: 0 -0.7rem;
 }
 
 .action-btn {
