--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,13 @@
 
 $mobile-width: 768px;
 $mobile-width-large: 916px;
+$small-screen-width: 525px;
+
+// Typography
+$small-screen-h1-font-size: 1.5rem;
+$small-screen-h2-font-size: 1.3rem;
+$small-screen-h3-font-size: 1.1rem;
+$small-screen-line-height: 1.2;
 
 // Sizing
 $header-standard-height: 80px;
